--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     flex-wrap: wrap;
 }
 .side {
-    flex: 30%;
+    flex: 20%;
     background-color: #f1f1f1;
     padding: 20px;
 }
@@ -51,4 +51,13 @@ body {
 @media screen and (max-width: 700px) {
     .row, .navbar {flex-direction: column;
     }
+}
+.fakeimg {
+    background-color: brown;
+    width: 50wh;
+    padding: 20px;
+    color: yellow;
+}
+.Makar {
+    background-color: gold;
 }
